Created all CRUD views for categories

--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-page="/Categorias/Index">
+                            <a class="nav-link" asp-page="/Categories/Index">
                                 <i class="bi bi-tags"></i> Categorías
                             </a>
                         </li>
