Created all CRUD views for Person In Charge for Establishments

--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-page="/Encargados/Index">
+                            <a class="nav-link" asp-page="/PersonInCharges/Index">
                                 <i class="bi bi-person-badge"></i> Encargados de Establecimiento
                             </a>
                         </li>
