--- a/SistemaDePagoDeAranceles/Pages/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <img src="@Url.Content("./budget.png")" alt="Logo" class="me-2" style="height:200px; width:auto;">
+    </div>
