Corrección vista edit-create

--- a/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
@@ -7,7 +7,7 @@
 <h2 class="mb-4">@ViewData["Title"]</h2>
 
 <div class="alert alert-warning">
-    ¿Estás seguro de que deseas eliminar el establecimiento <strong>@Model.Establishment.Name</strong>?
+    ¿Estás seguro de que deseas eliminar el establecimiento de <strong>@Model.Establishment.Name</strong>?
 </div>
 
 <form method="post">
