--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -10,6 +10,13 @@
     <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
 </a>
 
+<form method="post" asp-page-handler="Search" class="space-y-2">
+    <input asp-for="SearchTerm"
+           class="form-control"
+           placeholder="Search products by name" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
 <table class="table table-hover align-middle">
     <thead class="table-primary">
     <tr>
