--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -45,6 +45,13 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Login">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Registrar">Registrarse</a>
+                        </li>
+
                         <li class="nav-item mt-3">
                             <span class="text-muted small ps-3">Gestión</span>
                         </li>
