Category Repository with Hexagonal Arquitecture

--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -46,10 +46,15 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Login">Log In</a>
+                            <a class="nav-link active" asp-page="/Login">
+                                <i class="bi breadcrumb-item">Log In</i>
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Registrar">Registrarse</a>
+                            <a class="nav-link active" asp-page="/Registrar">
+                                <i class="bi breadcrumb-item">Resgistro</i>
+                            </a>
                         </li>
 
                         <li class="nav-item mt-3">
