Created Protected service for obfuscate the ID on edits links

--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
@@ -1,4 +1,4 @@
-@page "{id:int}"
+@page "{id?}"
 @model SistemaDePagoDeAranceles.Pages.PersonInCharges.EditModel
 @{
     ViewData["Title"] = "Editar Encargado";
