--- a/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@using SistemaDePagoDeAranceles.Models
+@using SistemaDePagoDeAranceles.Domain.Models
 @model SistemaDePagoDeAranceles.Pages.Categories.IndexModel
 
 @{
@@ -29,8 +29,8 @@
             <td>@item.Name</td>
             <td>@item.Description</td>
             <td>@item.BaseAmount</td>
-            <td>@(item.Active ? "Sí" : "No")</td>
-            <td>@item.RegisterDate.ToString("dd/MM/yyyy")</td>
+            <td>@(item.Status ? "Sí" : "No")</td>
+            <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
             <td>
                 <a asp-page="Edit" asp-route-id="@(Model.Protect(item.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
                 <a asp-page="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">Eliminar</a>
