fix updates pages

--- a/SistemaDePagoDeAranceles/Pages/Categories/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Edit.cshtml
@@ -9,6 +9,7 @@
 
 <form method="post">
     <input type="hidden" asp-for="Category.Id" />
+    <input type="hidden" asp-for="Category.Status"/>
 
     <div class="mb-3">
         <label asp-for="Category.Name" class="form-label"></label>
