--- a/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
@@ -40,6 +40,11 @@
             <input asp-for="Establishment.SanitaryLicense" class="form-control" />
         </div>
         
+        <div class="col-md-6">
+            <label asp-for="Establishment.SanitaryLicenseExpiry" class="form-label">Fecha de expiracion de licencia</label>
+            <input asp-for="Establishment.SanitaryLicenseExpiry" class="form-control" type="date"/>
+        </div>
+        
         <div class="col-md-6" style="display: none">
             <label asp-for="Establishment.PersonInChargeId" class="form-label">CI Persona encargada</label>
             <input asp-for="Establishment.PersonInChargeId" class="form-control" />
