--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
@@ -8,6 +8,7 @@
 
 <form method="post">
     <input type="hidden" asp-for="Person.Id" />
+    <input type="hidden" asp-for="Person.Status"/>
 
     <div class="form-group">
         <label>Nombre</label>
@@ -36,6 +37,12 @@
     <div class="form-group">
         <label>CI</label>
         <input asp-for="Person.Ci" class="form-control" required minlength="5" maxlength="50" pattern="^[A-Za-z0-9]+$" title="CI inválido. Sólo letras y números." />
+    </div>
+    
+    <div class="form-group">
+        <label>Direccion</label>
+        <input asp-for="Person.Address" class="form-control" required minlength="5" maxlength="50" />
+        <span asp-validation-for="Person.Address" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Actualizar</button>
