fix person in charge delete

--- a/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
@@ -1,4 +1,4 @@
-@page "{id:int}"
+@page "{id?}"
 @model SistemaDePagoDeAranceles.Pages.Establishments.DeleteModel
 @{
     ViewData["Title"] = "Eliminar Establecimiento";
