--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Delete.cshtml
@@ -1,4 +1,4 @@
-@page "{id:int}"
+@page "{id?}"
 @model SistemaDePagoDeAranceles.Pages.PersonInCharges.DeleteModel
 @{
     ViewData["Title"] = "Eliminar Encargado";
