Fix login and register

--- a/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@using SistemaDePagoDeAranceles.Models
+@using SistemaDePagoDeAranceles.Domain.Models
 @model SistemaDePagoDeAranceles.Pages.Categories.IndexModel
 
 @{
