--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" asp-page="/Registrar">
+                            <a class="nav-link active" asp-page="/Register">
                                 <i class="bi breadcrumb-item">Resgistro</i>
                             </a>
                         </li>
