--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -91,8 +91,14 @@
                             </li>
 
                             <li class="nav-item">
+                                <a class="nav-link" asp-page="/Users/Index">
+                                    <i class="bi bi-people"></i> Usuarios
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
                                 <a class="nav-link" asp-page="/Register">
-                                    <i class="bi"></i> Registrar usuario
+                                    <i class="bi bi-person-plus"></i> Registrar usuario (Rápido)
                                 </a>
                             </li>
                         }
