--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -22,10 +22,12 @@
     <thead class="table-primary">
     <tr>
         <th>Nombre</th>
+        <th>Nombre Comercial</th>
         <th>NIT</th>
         <th>Teléfono</th>
         <th>Email</th>
         <th>Tipo</th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
@@ -35,6 +37,7 @@
         {
             <tr>
                 <td>@e.Name</td>
+                <td>@e.BusinessName</td>
                 <td>@e.TaxId</td>
                 <td>@e.Phone</td>
                 <td>@e.Email</td>
