--- a/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
@@ -11,27 +11,34 @@
 <a asp-page="Create" class="btn btn-primary mb-3">
     <i class="bi bi-plus-circle"></i> Nueva Categoría
 </a>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Nombre</th>
-        <th>Descripción</th>
-        <th>Monto Base</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model.Categories)
-    {
+@if (Model.CategoriesResult.IsFailure)
+{
+    <h2> @Model.CategoriesResult.Errors.FirstOrDefault() </h2>   
+}
+else
+{
+    <table class="table table-striped">
+        <thead>
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Description</td>
-            <td>@item.BaseAmount</td>
-            <td>
-                <a asp-page="Edit" asp-route-id="@(Model.Protect(item.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
-                <a asp-page="Delete" asp-route-id="@(Model.Protect(item.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
-            </td>
+            <th>Nombre</th>
+            <th>Descripción</th>
+            <th>Monto Base</th>
+            <th></th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var item in Model.CategoriesResult.Value.Where(c => c.Status))
+        {
+            <tr>
+                <td>@item.Name</td>
+                <td>@item.Description</td>
+                <td>@item.BaseAmount</td>
+                <td>
+                    <a asp-page="Edit" asp-route-id="@(Model.Protect(item.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
+                    <a asp-page="Delete" asp-route-id="@(Model.Protect(item.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table> 
+}
