--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using Org.BouncyCastle.Crypto.Engines
 @model SistemaDePagoDeAranceles.Pages.Establishments.IndexModel
 @{
     ViewData["Title"] = "Gestión de Establecimientos";
@@ -6,54 +7,61 @@
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
 
-<a asp-page="Create" class="btn btn-primary mb-3">
-    <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
-</a>
+@if (Model.EstablishmentsGetAllResult.IsFailure)
+{
+    <h2 class="mb-4">No se encontraron registros</h2>
+}
+else
+{
+    <a asp-page="Create" class="btn btn-primary mb-3">
+        <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
+    </a>
 
-<form method="post" asp-page-handler="Search" class="space-y-2">
-    <input asp-for="SearchTerm"
-           class="form-control"
-           placeholder="Buscar Establecimientos por el Nombre" />
-    <button type="submit" class="btn btn-primary">Buscar</button>
-</form>
+    <form method="post" asp-page-handler="Search" class="space-y-2">
+        <input asp-for="SearchTerm"
+               class="form-control"
+               placeholder="Buscar Establecimientos por el Nombre" />
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
 
-<br>
-<table class="table table-hover align-middle">
-    <thead class="table-primary">
-    <tr>
-        <th>Nombre</th>
-        <th>Nombre Comercial</th>
-        <th>NIT</th>
-        <th>Teléfono</th>
-        <th>Email</th>
-        <th>Tipo</th>
-        <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    @if (Model.Establishments.Any())
-    {
-        @foreach (var e in Model.Establishments)
+    <br>
+    <table class="table table-hover align-middle">
+        <thead class="table-primary">
+        <tr>
+            <th>Nombre</th>
+            <th>Nombre Comercial</th>
+            <th>NIT</th>
+            <th>Teléfono</th>
+            <th>Email</th>
+            <th>Tipo</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        @if (Model.Establishments.Any())
+        {
+            @foreach (var e in Model.EstablishmentsGetAllResult.Value.Where(e => e.Active))
+            {
+                <tr>
+                    <td>@e.Name</td>
+                    <td>@e.BusinessName</td>
+                    <td>@e.TaxId</td>
+                    <td>@e.Phone</td>
+                    <td>@e.Email</td>
+                    <td>@e.EstablishmentType</td>
+                    <td>
+                        <a asp-page="Edit" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
+                        <a asp-page="Delete" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
+                    </td>
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                <td>@e.Name</td>
-                <td>@e.BusinessName</td>
-                <td>@e.TaxId</td>
-                <td>@e.Phone</td>
-                <td>@e.Email</td>
-                <td>@e.EstablishmentType</td>
-                <td>
-                    <a asp-page="Edit" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
-                    <a asp-page="Delete" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
-                </td>
+                <td colspan="9" class="text-center text-muted">No hay establecimientos registrados.</td>
             </tr>
         }
-    }
-    else
-    {
-        <tr>
-            <td colspan="9" class="text-center text-muted">No hay establecimientos registrados.</td>
-        </tr>
-    }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+}
