--- a/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
@@ -34,7 +34,7 @@
     </thead>
     <tbody>
 
-        @foreach (var user in Model.Users)
+        @foreach (var user in Model.ResultGetAllUser.Value.Where(u => u.Status))
         {
             <tr>
                 <td>@user.Username</td>
