Fixed various view issues

--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-page="/Login">
-                                    <i class="bi breadcrumb-item"></i> Login
+                                    <i class="bi breadcrumb-item"></i> Iniciar Sesion
                                 </a>
                             </li>
                         }
@@ -60,7 +60,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-page="/Logout">
-                                    <i class="bi breadcrumb-item"></i> Logout
+                                    <i class="bi breadcrumb-item"></i> Cerrar Sesion
                                 </a>
                             </li>
                         }
