--- a/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
@@ -25,7 +25,7 @@
     <tr>
         <th>Usuario</th>
         <th>Nombre Completo</th>
-        <th>Email</th>
+        <th>Correo</th>
         <th>Rol</th>
         <th>Estado</th>
         <th>Fecha de Creación</th>
