--- a/SistemaDePagoDeAranceles/Pages/Establishments/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Create.cshtml
@@ -17,11 +17,6 @@ else
     <div asp-validation-summary="All" class="text-danger mb-3"></div>
     <div class="row g-3">
         <div class="col-md-6">
-            <label asp-for="Establishment.BusinessName" class="form-label">Nombre Comercial</label>
-            <input asp-for="Establishment.BusinessName" class="form-control" required />
-        </div>
-        
-        <div class="col-md-6">
             <label asp-for="Establishment.Name" class="form-label">Nombre</label>
             <input asp-for="Establishment.Name" class="form-control" required />
         </div>
@@ -60,16 +55,16 @@ else
             <label asp-for="Establishment.EstablishmentType" class="form-label">Tipo de Establecimiento</label>
             <select asp-for="Establishment.EstablishmentType" class="form-select">
                 <option value="">Seleccionar tipo</option>
-                <option value="RESTAURANT">RESTAURANT</option>
+                <option value="RESTAURANT">RESTAURANTE</option>
                 <option value="BAR">BAR</option>
                 <option value="CAFETERIA">CAFETERIA</option>
-                <option value="FAST_FOOD">FAST_FOOD</option>
-                <option value="OTHER">OTHER</option>
+                <option value="FAST_FOOD">COMIDA RAPIDA</option>
+                <option value="OTHER">OTRO</option>
             </select>
         </div>
 
         <div class="col-md-6">
-            <label class="form-label">Person in Charge</label>
+            <label class="form-label">Persona a Cargo</label>
             <select asp-for="Establishment.PersonInChargeId" class="form-select">
                 @foreach (var person in Model.PersonsInCharge)
                 {
