--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -3,12 +3,18 @@
 @model SistemaDePagoDeAranceles.Pages.Establishments.IndexModel
 @{
     ViewData["Title"] = "Gestión de Establecimientos";
+    bool isAdmin = User?.IsInRole("Admin") == true;
+    bool isContador = User?.IsInRole("Contador") == true;
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-<a asp-page="Create" class="btn btn-primary mb-3">
-    <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
-</a>
+
+@if (isAdmin)
+{
+    <a asp-page="Create" class="btn btn-primary mb-3">
+        <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
+    </a>
+}
 @if (Model.EstablishmentsGetAllResult.IsFailure)
 {
     <h2 class="mb-4">@Model.EstablishmentsGetAllResult.Errors.FirstOrDefault()</h2>
@@ -27,10 +33,9 @@ else
         <thead class="table-primary">
         <tr>
             <th>Nombre</th>
-            <th>Nombre Comercial</th>
             <th>NIT</th>
             <th>Teléfono</th>
-            <th>Email</th>
+            <th>Correo</th>
             <th>Tipo</th>
             <th>Acciones</th>
         </tr>
@@ -41,7 +46,6 @@ else
             {
                 <tr>
                     <td>@e.Name</td>
-                    <td>@e.BusinessName</td>
                     <td>@e.TaxId</td>
                     <td>@e.Phone</td>
                     <td>@e.Email</td>
