Refactory pages y login html

--- a/SistemaDePagoDeAranceles/Pages/Establishments/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Create.cshtml
@@ -6,6 +6,8 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
+
 @if (Model.ResultGetAllPersonInCharge.IsFailure)
 {
     <h2 class="mb-4"> No se encontraror encarcagos registrados, registre un encargado para continuar. </h2>
