--- a/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <form method="post" class="card shadow-sm p-4">
     <input type="hidden" asp-for="Establishment.Id" />
     <div class="col-md-6">
