--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>¿Seguro que quieres eliminar este encargado?</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <div>
     <strong>@Model.Person.FirstName @Model.Person.LastName</strong><br />
     <span>@Model.Person.Email</span><br />
