--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Editar Encargado</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <form method="post">
     <input type="hidden" asp-for="Person.Id" />
 
