--- a/SistemaDePagoDeAranceles/Pages/Users/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <form method="post" class="card shadow-sm p-4">
     <input type="hidden" asp-for="User.Id" />
     <input type="hidden" asp-for="User.Username" />
