--- a/SistemaDePagoDeAranceles/Pages/Categories/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <h4>¿Estás seguro que deseas eliminar esta categoría?</h4>
 
 <div class="mb-3">
