--- a/SistemaDePagoDeAranceles/Pages/Categories/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <form method="post">
     <input type="hidden" asp-for="Category.Id" />
 
