--- a/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
@@ -7,18 +7,17 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <a asp-page="Create" class="btn btn-primary mb-3">
     <i class="bi bi-plus-circle"></i> Nueva Categoría
 </a>
 @if (Model.CategoriesResult.IsFailure)
 {
     <h2> @Model.CategoriesResult.Errors.FirstOrDefault() </h2>   
-}
-else
+}else
 {
-    <table class="table table-striped">
-        <thead>
+    <table class="table table-hover align-middle">
+        <thead class="table-primary">   
         <tr>
             <th>Nombre</th>
             <th>Descripción</th>
