--- a/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <div class="alert alert-warning">
     ¿Estás seguro de que deseas eliminar el establecimiento de <strong>@Model.Establishment.Name</strong>?
 </div>
