--- a/SistemaDePagoDeAranceles/Pages/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Bienvenido</h1>
     <img src="@Url.Content("./budget.png")" alt="Logo" class="me-2" style="height:200px; width:auto;">
     </div>
