--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Create.cshtml
@@ -5,47 +5,53 @@
 }
 
 <h2>Registrar Encargado</h2>
+<hr class="border-top border-2 border-secondary opacity-100 mb-4">
+<div class="d-flex justify-content-center align-items-center vh-50 bg-light">
+    <form method="post" class="mt-3 w-50">
+            <div class="form-group">
+            <label>Nombre</label>
+            <input asp-for="Person.FirstName" class="form-control" required minlength="3" maxlength="50" pattern="^(?!\d+$).+" title="El nombre debe contener letras y no puede ser solo números." />
+                <span asp-validation-for="Person.FirstName" class="text-danger"></span>
+            </div>
 
-<form method="post" class="mt-3">
-    <div class="form-group">
-    <label>Nombre</label>
-    <input asp-for="Person.FirstName" class="form-control" required minlength="3" maxlength="50" pattern="^(?!\d+$).+" title="El nombre debe contener letras y no puede ser solo números." />
-        <span asp-validation-for="Person.FirstName" class="text-danger"></span>
-    </div>
+            <div class="form-group">
+            <label>Apellido</label>
+            <input asp-for="Person.LastName" class="form-control" required minlength="3" maxlength="50" pattern="^(?!\d+$).+" title="El apellido debe contener letras y no puede ser solo números." />
+                <span asp-validation-for="Person.LastName" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-    <label>Apellido</label>
-    <input asp-for="Person.LastName" class="form-control" required minlength="3" maxlength="50" pattern="^(?!\d+$).+" title="El apellido debe contener letras y no puede ser solo números." />
-        <span asp-validation-for="Person.LastName" class="text-danger"></span>
-    </div>
+            <div class="form-group">
+            <label>Email</label>
+            <input asp-for="Person.Email" class="form-control" type="email" maxlength="150" />
+                <span asp-validation-for="Person.Email" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-    <label>Email</label>
-    <input asp-for="Person.Email" class="form-control" type="email" maxlength="150" />
-        <span asp-validation-for="Person.Email" class="text-danger"></span>
-    </div>
+            <div class="form-group">
+            <label>Teléfono</label>
+            <input asp-for="Person.Phone" class="form-control" maxlength="20" pattern="^[0-9()+\-\s]+$" title="Teléfono inválido." />
+                <span asp-validation-for="Person.Phone" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-    <label>Teléfono</label>
-    <input asp-for="Person.Phone" class="form-control" maxlength="20" pattern="^[0-9()+\-\s]+$" title="Teléfono inválido." />
-        <span asp-validation-for="Person.Phone" class="text-danger"></span>
-    </div>
+            <div class="form-group">
+            <label>CI</label>
+            <input asp-for="Person.Ci" class="form-control" required minlength="5" maxlength="50" pattern="^[A-Za-z0-9]+$" title="CI inválido. Sólo letras y números." />
+                <span asp-validation-for="Person.Ci" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-    <label>CI</label>
-    <input asp-for="Person.Ci" class="form-control" required minlength="5" maxlength="50" pattern="^[A-Za-z0-9]+$" title="CI inválido. Sólo letras y números." />
-        <span asp-validation-for="Person.Ci" class="text-danger"></span>
-    </div>
+            <div class="form-group">
+                <label>Address</label>
+                <input asp-for="Person.Address" class="form-control" required minlength="5" maxlength="50" title="Address inválido. Sólo letras y números." />
+                <span asp-validation-for="Person.Address" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-        <label>Address</label>
-        <input asp-for="Person.Address" class="form-control" required minlength="5" maxlength="50" title="Address inválido. Sólo letras y números." />
-        <span asp-validation-for="Person.Address" class="text-danger"></span>
-    </div>
+            <br>
 
-    <button type="submit" class="btn btn-success">Guardar</button>
-    <a asp-page="Index" class="btn btn-secondary">Cancelar</a>
-</form>
+            <button type="submit" class="btn btn-success">Guardar</button>
+            <a asp-page="Index" class="btn btn-secondary">Cancelar</a>
+
+            <br>
+        </form>
+ </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
