--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Index.cshtml
@@ -3,9 +3,12 @@
 @{
     ViewData["Title"] = "Encargados";
 }
-<h1>Lista de Encargados</h1>
+<h2>Lista de Encargados</h2>
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <p>
-    <a asp-page="Create" class="btn btn-primary">Nuevo Encargado</a>
+    <a asp-page="Create" class="btn btn-primary">
+        <i class="bi bi-plus-circle"></i> Nuevo Encargado
+    </a>
 </p>
 @if (Model.ResultGetAllPersonInCharge.IsFailure)
 {
@@ -13,9 +16,9 @@
 }
 else
 {
-    <table class="table table-striped">
-        <thead>
-        <tr>
+    <table class="table table-hover align-middle">
+        <thead class="table-primary">
+            <tr>
             <th>Nombre</th>
             <th>Correo</th>
             <th>Teléfono</th>
