--- a/SistemaDePagoDeAranceles/Pages/Users/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 @if (Model.GeneratedUsername != null)
 {
     <div class="alert alert-success">
