--- a/SistemaDePagoDeAranceles/Pages/Users/Delete.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <div class="alert alert-warning">
     <h4>¿Estás seguro de que deseas eliminar este usuario?</h4>
     <hr />
