--- a/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Users/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
-
+<hr class="border-top border-2 border-secondary opacity-50 mb-4">
 <a asp-page="Create" class="btn btn-primary mb-3">
     <i class="bi bi-plus-circle"></i> Nuevo Usuario
 </a>
