fix styles and attributes names

--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -26,6 +26,7 @@
         <th>Teléfono</th>
         <th>Email</th>
         <th>Tipo</th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
