--- a/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Edit.cshtml
@@ -16,22 +16,23 @@
         </div>
 
         <div class="col-md-6">
-            <label asp-for="Establishment.TaxId" class="form-label">Codigo de Impuesto</label>
-            <input asp-for="Establishment.TaxId" class="form-control" />
+            @* Codigo de impuesto *@
+            <label asp-for="Establishment.TaxId" class="form-label">NIT</label>
+            <input asp-for="Establishment.TaxId" class="form-control"/>
         </div>
 
         <div class="col-md-6">
-            <label asp-for="Establishment.Email" class="form-label">Correo Electronico</label>
+            <label asp-for="Establishment.Email" class="form-label">Correo Electrónico</label>
             <input asp-for="Establishment.Email" class="form-control" />
         </div>
 
         <div class="col-md-6">
-            <label asp-for="Establishment.Phone" class="form-label">Telefono celular</label>
+            <label asp-for="Establishment.Phone" class="form-label">Teléfono celular</label>
             <input asp-for="Establishment.Phone" class="form-control" />
         </div>
 
         <div class="col-md-6">
-            <label asp-for="Establishment.Address" class="form-label">Direccion</label>
+            <label asp-for="Establishment.Address" class="form-label">Dirección</label>
             <input asp-for="Establishment.Address" class="form-control" />
         </div>
         
@@ -41,7 +42,7 @@
         </div>
         
         <div class="col-md-6">
-            <label asp-for="Establishment.SanitaryLicenseExpiry" class="form-label">Fecha de expiracion de licencia</label>
+            <label asp-for="Establishment.SanitaryLicenseExpiry" class="form-label">Fecha de expiración de licencia</label>
             <input asp-for="Establishment.SanitaryLicenseExpiry" class="form-control" type="date"/>
         </div>
         
@@ -60,11 +61,11 @@
             <label asp-for="Establishment.EstablishmentType" class="form-label">Tipo de Establecimiento</label>
             <select asp-for="Establishment.EstablishmentType" class="form-select">
                 <option value="">Seleccionar tipo</option>
-                <option value="RESTAURANT">RESTAURANT</option>
-                <option value="BAR">BAR</option>
-                <option value="CAFETERIA">CAFETERIA</option>
-                <option value="FAST_FOOD">FAST_FOOD</option>
-                <option value="OTHER">OTHER</option>
+                <option value="RESTAURANT">Restaurante</option>
+                <option value="BAR">Bar</option>
+                <option value="CAFETERIA">Cafetería</option>
+                <option value="FAST_FOOD">Comida rápida</option>
+                <option value="OTHER">Otro</option>
             </select>
         </div>
     </div>
